appId: com.qazandoqafood
---
- runFlow: login.yaml
- tapOn: "Selecione seu endereço..."
- tapOn: "PERMITIR"
- tapOn: "Pastelaria da Maria"
- tapOn:
    point: "95%,53%"
- tapOn:
    id: "qtd-itens"
- tapOn: "CONFIRMAR PEDIDO"
- scroll
- tapOn:
    point: "10%,62%"
- tapOn: "FAZER PEDIDO"
- assertVisible: "Pedido realizado"
- stopApp: com.qazandoqafood